--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
                             Get Instant Account Approval...</p>
                         <div class="row justify-content-center ">
 
-                            <a
+                            <a class="img-social-div"
                                 href="https://instagram.com/mahakal_onlinebook_official?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">
-                                <i class="bi bi-instagram"></i></a>
-                            <a href="https://wa.me/+919982828988"> <i class="bi bi-whatsapp"></i></a>
-                            <a href="https://t.me/mahakalonlineidprovider"> <i class="bi bi-telegram"></i></a>
+                                <img src="images/instagram-icon.png" class="img-social" > </a>
+                            <a class="img-social-div" href="https://wa.me/+919982828988"> <img src="images/whatsapp-icon.png" class="img-social"> </a>
+                            <a class="img-social-div"href="https://t.me/mahakalonlineidprovider">  <img src="images/Telegram_logo.png" class="img-social"> </a>
                         </div>
                     </div>
                 </div>
