--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h1>Mahakal Online Book's Best ID</h1>
                         <p>Mahakal Online Book is 100% Trusted ID Provider in India. Get India's Best ID by Mahakal Online Book</p>
                         <div class="text-center">
-                            <a href="https://wa.me/+919982828988">Join Mahakal Online Book Now - Whatsapp Us @9982828988 </a>
+                            <a href="https://wa.me/+917374828988">Join Mahakal Online Book Now - Whatsapp Us @7374828988 </a>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-sm-5 col-12 col-md-5 pl-md-0">
                     <div class="claim_img">
-                        <a href="https://wa.me/+919982828988"><img src="images/banner.jpeg" class="img-fluid"
+                        <a href="https://wa.me/+917374828988"><img src="images/poster_new.jpeg" class="img-fluid"
                                 alt="claim_part"></a>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             Join India's Authentic , Reliable &amp; Trusted ID.</p>
                         <p class="d-none d-sm-block d-md-none"></p>
                         <div class="text-center">
-                            <a href="https://wa.me/+919982828988"> Join Mahakal Online Book Now - Whatsapp Us @ 7777077070</a>
+                            <a href="https://wa.me/+917374828988"> Join Mahakal Online Book Now - Whatsapp Us @ 7374828988</a>
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                 <div class="col-lg-6 col-md-6 col-12 pl-md-0">
                     <div class="subcrib">
                         <h3>Whatsapp Now</h3>
-                        <form action="https://wa.me/+919982828988">
+                        <form action="https://wa.me/+917374828988">
                             <input type="Phone Number" placeholder="Your Whatsapp Number">
                             <button class="pay_butt" type="submit">
                                 <i class="bi bi-send"></i>
@@ -183,7 +183,7 @@
                             <a class="img-social-div"
                                 href="https://instagram.com/mahakal_onlinebook_official?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">
                                 <img src="images/instagram-icon.png" class="img-social" > </a>
-                            <a class="img-social-div" href="https://wa.me/+919982828988"> <img src="images/whatsapp-icon.png" class="img-social"> </a>
+                            <a class="img-social-div" href="https://wa.me/+917374828988"> <img src="images/whatsapp-icon.png" class="img-social"> </a>
                             <a class="img-social-div"href="https://t.me/mahakalonlineidprovider">  <img src="images/Telegram_logo.png" class="img-social"> </a>
                         </div>
                     </div>
